ReentrantLock for multithreading problem